# Pizza-Delivery-API

./: README.md
app/: README.md  config.py  database.py  dependencies.py  enums.py  main.py  models.py  pyproject.toml  schemas.py
app/models/: cart.py  delivery.py  order.py  payment.py  pizza.py  user.py
app/routers/: admin.py  cart.py  customer.py  delivery.py  orders.py  payment.py  pizzas.py  user.py
app/schemas/: cart.py  delivery.py  order.py  payment.py  pizza.py  user.py
